--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
             <hr class="light">
             <p class="text-faded">After being in retail sale most of my career, I knew I wanted to get into a more challening and rewarding career. My passion for technology lead me to go to Learning Fuze, an accelerated web devolpment program where I spent over 700 hours learning and getting hands on experience in web development.</p>
             <p class="text-faded">I've had the opportunity to work with a number of great teams in developing projects that I'm truly happy to be a part of.  The project I am the most fond of was my teams final project, The Cube Tube, an application to let users subscribe to Youtube channels anonymously through our site and organize their channels to their own customizable catagories.</p> 
+            <p class="text-faded">I look forward to bringing that passion to my next project. Please call or email me to discuss how we can work together.</p>
             <a class="btn btn-default btn-xl js-scroll-trigger" href="#services">Get Started!</a>
           </div>
         </div>
@@ -152,8 +153,8 @@
       <div class="container-fluid">
         <div class="row no-gutter popup-gallery">
           <div class="col-lg-4 col-sm-4">
-            <a class="portfolio-box" href="img/portfolio/fullsize/1.jpg">
-              <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" alt="">
+            <a class="portfolio-box" href="img/portfolio/fullsize/thecubetube.png">
+              <img class="img-fluid" src="img/portfolio/thumbnails/thecubetube.png" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
@@ -167,30 +168,30 @@
             </a>
           </div>
           <div class="col-lg-4 col-sm-4">
-            <a class="portfolio-box" href="img/portfolio/fullsize/2.jpg">
-              <img class="img-fluid" src="img/portfolio/thumbnails/2.jpg" alt="">
-              <div class="portfolio-box-caption">
-                <div class="portfolio-box-caption-content">
-                  <div class="project-category text-faded">
-                    Category
-                  </div>
-                  <div class="project-name">
-                    Hearthstone Memory Match
+              <a class="portfolio-box" href="img/portfolio/fullsize/food_picker.png">
+                <img class="img-fluid" src="img/portfolio/thumbnails/food_picker.png" alt="">
+                <div class="portfolio-box-caption">
+                  <div class="portfolio-box-caption-content">
+                    <div class="project-category text-faded">
+                      Category
+                    </div>
+                    <div class="project-name">
+                      Food Picker
+                    </div>
                   </div>
                 </div>
-              </div>
-            </a>
-          </div>
+              </a>
+            </div>
           <div class="col-lg-4 col-sm-4">
-            <a class="portfolio-box" href="img/portfolio/fullsize/3.jpg">
-              <img class="img-fluid" src="img/portfolio/thumbnails/3.jpg" alt="">
+            <a class="portfolio-box" href="img/portfolio/fullsize/southparkguess.png">
+              <img class="img-fluid" src="img/portfolio/thumbnails/southparkguess.png" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
                     Category
                   </div>
                   <div class="project-name">
-                    Food Picker
+                    South Park Guessing Game
                   </div>
                 </div>
               </div>
@@ -206,7 +207,7 @@
           <div class="col-lg-8 mx-auto text-center">
             <h2 class="section-heading">Let's Get In Touch!</h2>
             <hr class="primary">
-            <p>Ready to start your next project with us? That's great! Give us a call or send us an email and we will get back to you as soon as possible!</p>
+            <p>I am always looking for new and exciting opportunities to learn and grow!</p>
           </div>
         </div>
         <div class="row">
