--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <p class="text-faded">After being in retail sale most of my career, I knew I wanted to get into a more challening and rewarding career. My passion for technology lead me to go to Learning Fuze, an accelerated web devolpment program where I spent over 700 hours learning and getting hands on experience in web development.</p>
             <p class="text-faded">I've had the opportunity to work with a number of great teams in developing projects that I'm truly happy to be a part of.  The project I am the most fond of was my teams final project, The Cube Tube, an application to let users subscribe to Youtube channels anonymously through our site and organize their channels to their own customizable catagories.</p> 
             <p class="text-faded">I look forward to bringing that passion to my next project. Please call or email me to discuss how we can work together.</p>
-            <a class="btn btn-default btn-xl js-scroll-trigger" href="#services">Get Started!</a>
+            <a class="btn btn-default btn-xl js-scroll-trigger" href="#services">My Skills</a>
           </div>
         </div>
       </div>
@@ -152,7 +152,7 @@
     <section class="p-0" id="portfolio">
       <div class="container-fluid">
         <div class="row no-gutter popup-gallery">
-          <div class="col-lg-4 col-sm-4">
+          <div class="col-lg-4 col-md-6 col-sm-6">
             <a class="portfolio-box" href="img/portfolio/fullsize/thecubetube.png">
               <img class="img-fluid" src="img/portfolio/thumbnails/thecubetube.png" alt="">
               <div class="portfolio-box-caption">
@@ -167,13 +167,12 @@
               </div>
             </a>
           </div>
-          <div class="col-lg-4 col-sm-4">
+          <div class="col-lg-4 col-md-6 col-sm-6">
               <a class="portfolio-box" href="img/portfolio/fullsize/food_picker.png">
                 <img class="img-fluid" src="img/portfolio/thumbnails/food_picker.png" alt="">
                 <div class="portfolio-box-caption">
                   <div class="portfolio-box-caption-content">
                     <div class="project-category text-faded">
-                      Category
                     </div>
                     <div class="project-name">
                       Food Picker
@@ -182,7 +181,7 @@
                 </div>
               </a>
             </div>
-          <div class="col-lg-4 col-sm-4">
+          <div class="col-lg-4 col-md-6 col-sm-6">
             <a class="portfolio-box" href="img/portfolio/fullsize/southparkguess.png">
               <img class="img-fluid" src="img/portfolio/thumbnails/southparkguess.png" alt="">
               <div class="portfolio-box-caption">
