--- a/index.html
+++ b/index.html
@@ -97,54 +97,78 @@
       </div>
       <div class="container">
         <div class="row">
-          <div class="col-lg-3 col-md-4 col-sm-6 text-center">
+          <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6 text-center">
             <div class="service-box">
               <i class="devicon-react-original text-primary sr-icons"></i>
               <h4>ReactJS</h4>
             </div>
           </div>
-          <div class="col-lg-3 col-md-4 col-sm-6 text-center">
+          <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6 text-center">
             <div class="service-box">
               <i class="devicon-javascript-plain text-primary sr-icons"></i>
               <h4>JavaScript</h4>
             </div>
           </div>
-          <div class="col-lg-3 col-md-4 col-sm-6 text-center">
+          <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6 text-center">
             <div class="service-box">
               <i class="devicon-jquery-plain text-primary sr-icons"></i>
               <h4>jQuery</h4>
             </div>
           </div>
-          <div class="col-lg-3 col-md-4 col-sm-6 text-center">
+          <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6 text-center">
             <div class="service-box">
               <i class="devicon-html5-plain text-primary sr-icons"></i>
               <h4>HTML5</h4>
             </div>
           </div>
-          <div class="col-lg-3 col-md-4 col-sm-6 text-center">
+          <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6 text-center">
             <div class="service-box">
               <i class="devicon-css3-plain text-primary sr-icons"></i>
               <h4>CSS3</h4>
             </div>
           </div>
-          <div class="col-lg-3 col-md-4 col-sm-6 text-center">
+          <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6 text-center">
               <div class="service-box">
                 <i class="devicon-bootstrap-plain text-primary sr-icons"></i>
                 <h4>Bootstrap</h4>
               </div>
             </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 text-center">
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6 text-center">
               <div class="service-box">
                 <i class="devicon-github-plain text-primary sr-icons"></i>
                 <h4>Github</h4>
               </div>
             </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 text-center">
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6 text-center">
               <div class="service-box">
                 <i class="devicon-git-plain text-primary sr-icons"></i>
                 <h4>Git</h4>
               </div>
             </div>
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6 text-center">
+                <div class="service-box">
+                  <i class="devicon-php-plain text-primary sr-icons"></i>
+                  <h4>PhP</h4>
+                </div>
+              </div>
+              <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6 text-center">
+                <div class="service-box">
+                  <i class="devicon-mysql-plain text-primary sr-icons"></i>
+                  <h4>MySQL</h4>
+                </div>
+              </div>
+              <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6 text-center">
+                <div class="service-box">
+                  <i class="devicon-slack-plain text-primary sr-icons"></i>
+                  <h4>Slack</h4>
+                </div>
+              </div>
+              <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6 text-center">
+                <div class="service-box">
+                  <i class="devicon-visualstudio-plain text-primary sr-icons"></i>
+                  <h4>Visual Studio</h4>
+                </div>
+              </div>
         </div>
       </div>
     </section>
@@ -168,20 +192,6 @@
             </a>
           </div>
           <div class="col-lg-4 col-md-6 col-sm-6">
-              <a class="portfolio-box" href="img/portfolio/fullsize/food_picker.png">
-                <img class="img-fluid" src="img/portfolio/thumbnails/food_picker.png" alt="">
-                <div class="portfolio-box-caption">
-                  <div class="portfolio-box-caption-content">
-                    <div class="project-category text-faded">
-                    </div>
-                    <div class="project-name">
-                      Food Picker
-                    </div>
-                  </div>
-                </div>
-              </a>
-            </div>
-          <div class="col-lg-4 col-md-6 col-sm-6">
             <a class="portfolio-box" href="img/portfolio/fullsize/southparkguess.png">
               <img class="img-fluid" src="img/portfolio/thumbnails/southparkguess.png" alt="">
               <div class="portfolio-box-caption">
@@ -196,6 +206,20 @@
               </div>
             </a>
           </div>
+          <div class="col-lg-4 col-md-6 col-sm-6">
+              <a class="portfolio-box" href="img/portfolio/fullsize/food_picker.png">
+                <img class="img-fluid" src="img/portfolio/thumbnails/food_picker.png" alt="">
+                <div class="portfolio-box-caption">
+                  <div class="portfolio-box-caption-content">
+                    <div class="project-category text-faded">
+                    </div>
+                    <div class="project-name">
+                      Food Picker
+                    </div>
+                  </div>
+                </div>
+              </a>
+            </div>
         </div>
       </div>
     </section>
