added linked in as contact

--- a/index.html
+++ b/index.html
@@ -97,73 +97,73 @@
       </div>
       <div class="container">
         <div class="row">
-          <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6 text-center">
+          <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6 text-center skills">
             <div class="service-box">
               <i class="devicon-react-original text-primary sr-icons"></i>
               <h4>ReactJS</h4>
             </div>
           </div>
-          <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6 text-center">
+          <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6 text-center skills">
             <div class="service-box">
               <i class="devicon-javascript-plain text-primary sr-icons"></i>
               <h4>JavaScript</h4>
             </div>
           </div>
-          <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6 text-center">
+          <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6 text-center skills">
             <div class="service-box">
               <i class="devicon-jquery-plain text-primary sr-icons"></i>
               <h4>jQuery</h4>
             </div>
           </div>
-          <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6 text-center">
+          <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6 text-center skills">
             <div class="service-box">
               <i class="devicon-html5-plain text-primary sr-icons"></i>
               <h4>HTML5</h4>
             </div>
           </div>
-          <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6 text-center">
+          <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6 text-center skills">
             <div class="service-box">
               <i class="devicon-css3-plain text-primary sr-icons"></i>
               <h4>CSS3</h4>
             </div>
           </div>
-          <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6 text-center">
+          <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6 text-center skills">
               <div class="service-box">
                 <i class="devicon-bootstrap-plain text-primary sr-icons"></i>
                 <h4>Bootstrap</h4>
               </div>
             </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6 text-center">
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6 text-center skills">
               <div class="service-box">
                 <i class="devicon-github-plain text-primary sr-icons"></i>
                 <h4>Github</h4>
               </div>
             </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6 text-center">
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6 text-center skills">
               <div class="service-box">
                 <i class="devicon-git-plain text-primary sr-icons"></i>
                 <h4>Git</h4>
               </div>
             </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6 text-center">
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6 text-center skills">
                 <div class="service-box">
                   <i class="devicon-php-plain text-primary sr-icons"></i>
                   <h4>PhP</h4>
                 </div>
               </div>
-              <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6 text-center">
+              <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6 text-center skills">
                 <div class="service-box">
                   <i class="devicon-mysql-plain text-primary sr-icons"></i>
                   <h4>MySQL</h4>
                 </div>
               </div>
-              <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6 text-center">
+              <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6 text-center skills">
                 <div class="service-box">
                   <i class="devicon-slack-plain text-primary sr-icons"></i>
                   <h4>Slack</h4>
                 </div>
               </div>
-              <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6 text-center">
+              <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6 text-center skills">
                 <div class="service-box">
                   <i class="devicon-visualstudio-plain text-primary sr-icons"></i>
                   <h4>Visual Studio</h4>
@@ -234,15 +234,21 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-lg-4 ml-auto text-center">
-            <i class="fa fa-phone fa-3x sr-contact"></i>
-            <p class="phoneNum"></p>
-          </div>
-          <div class="col-lg-4 mr-auto text-center">
+          <div class="col-lg-4 col-sm-3 mr-auto text-center contact">
             <i class="fa fa-envelope-o fa-3x sr-contact"></i>
             <p>
-              <a class="email" href="mailto:your-email@your-domain.com"></a>
+              <a class="email info" href="mailto:your-email@your-domain.com"></a>
             </p>
+          </div>
+          <div class="col-lg-4 col-sm-3  ml-auto text-center contact">
+            <i class="fa fa-linkedin fa-3x sr-contact"></i>
+            <p>
+              <a class="linkedin info" href="">Linkedin</a>                
+            </p>
+          </div>
+          <div class="col-lg-4 col-sm-3  ml-auto text-center contact">
+            <i class="fa fa-phone fa-3x sr-contact"></i>
+            <p class="phoneNum info"></p>
           </div>
         </div>
       </div>
