--- a/index.html
+++ b/index.html
@@ -174,6 +174,14 @@
     </section>
 
     <section class="p-0" id="portfolio">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-12 text-center">
+              <h2 class="section-heading">Projects</h2>
+              <hr class="primary">
+            </div>
+          </div>
+        </div>
       <div class="container-fluid">
         <div class="row no-gutter popup-gallery">
           <div class="col-lg-4 col-md-6 col-sm-6">
@@ -228,7 +236,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto text-center">
-            <h2 class="section-heading">Let's Get In Touch!</h2>
+            <h2 class="section-heading">Contact</h2>
             <hr class="primary">
             <p>I am always looking for new and exciting opportunities to learn and grow!</p>
           </div>
