--- a/index.html
+++ b/index.html
@@ -189,12 +189,16 @@
               <img class="img-fluid" src="img/portfolio/thumbnails/thecubetube.png" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
-                  <div class="project-category text-faded">
-                    Category
-                  </div>
                   <div class="project-name">
                     The Cube Tube
                   </div>
+                <div class="project-category text-faded">
+                  <ul class="liveCode">
+                    <li class="live">Live</li>
+                    <li class="seperator">|</li>
+                    <li class="code">Code</li>
+                  </ul>
+                </div>
                 </div>
               </div>
             </a>
@@ -204,11 +208,15 @@
               <img class="img-fluid" src="img/portfolio/thumbnails/southparkguess.png" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
-                  <div class="project-category text-faded">
-                    Category
-                  </div>
                   <div class="project-name">
                     South Park Guessing Game
+                  </div>
+                  <div class="project-category text-faded">
+                    <ul class="liveCode">
+                      <li class="live">Live</li>
+                      <li class="seperator">|</li>
+                      <li class="code">Code</li>
+                    </ul>
                   </div>
                 </div>
               </div>
@@ -219,10 +227,15 @@
                 <img class="img-fluid" src="img/portfolio/thumbnails/food_picker.png" alt="">
                 <div class="portfolio-box-caption">
                   <div class="portfolio-box-caption-content">
-                    <div class="project-category text-faded">
-                    </div>
                     <div class="project-name">
                       Food Picker
+                    </div>
+                    <div class="project-category text-faded">
+                      <ul class="liveCode">
+                        <li class="live">Live</li>
+                        <li class="seperator">|</li>
+                        <li class="code">Code</li>
+                      </ul>
                     </div>
                   </div>
                 </div>
